# pecha-glyph-generation

./: .gitignore  pyproject.toml
src/glyph-generation-model/: cGAN_with_two_condition.ipynb  condition_images.ipynb
